--- a/app/webroot/css/cake.generic.css
+++ b/app/webroot/css/cake.generic.css
@@ -40,26 +40,29 @@ h1, h2, h3, h4 {
 }
 h1 {
 	background:#fff;
-	color: #003d4c;
-	font-size: 100%;
+	color: #E02512;
+	font-size: 170%;
+	font-weight: bold;
 }
 h2 {
 	background:#fff;
-	color: #e32;
+	color: #107BBF;
 	font-family:'Gill Sans','lucida grande', helvetica, arial, sans-serif;
-	font-size: 190%;
+	font-size: 140%;
 }
 h3 {
-	color: #2c6877;
+	color:#F26520;
 	font-family:'Gill Sans','lucida grande', helvetica, arial, sans-serif;
-	font-size: 165%;
+	font-size: 135%;
+	font-weight: bold;
 }
 h4 {
-	color: #993;
+	color: #DE2510;
+	font-size: 125%;
 	font-weight: normal;
 }
 ul, li {
-	margin: 0 12px;
+	margin: 5px 10px 5px 0;
 }
 p {
 	margin: 0 0 1em 0;
@@ -730,3 +733,4 @@ pre {
 #url-rewriting-warning {
 	display:none;
 }
+#busy-indicator { display:none; }
