--- a/app/webroot/css/cake.generic.css
+++ b/app/webroot/css/cake.generic.css
@@ -97,12 +97,12 @@ p {
 	background: #fff;
 	clear: both;
 	color: #333;
-	padding: 10px 20px 40px 20px;
-	overflow: auto;
+	/*padding: 10px 20px 40px 20px;*/
+	/*overflow: auto;*/
 }
 #footer {
 	clear: both;
-	padding: 6px 10px;
+	/*padding: 6px 10px;*/
 	text-align: right;
 }
 
